--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <!-- Line Break followed by closing -->
         <hr>
         <h5 class="text-center">
-          <small>Made with lots and lots of
-            <i class="fa fa-heart"></i>
+          <small>My name is Max Jackson and I am a web developer in the making.
+            <i class="fa fa-newspaper-o"></i>
           </small>
         </h5>
 
