--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         <!-- Line Break followed by closing -->
         <hr>
         <h5 class="text-center">
-          <small>My name is Max Jackson and I am a web developer in the making.
+          <small>My name is Max Jackson and I am a web developer in the making. 2019.
+              This was created in collaboration with Michael Garcia and Ryan G. during the
+              University of Arizona Coding Boot Camp 3/2/2019.
             <i class="fa fa-newspaper-o"></i>
           </small>
         </h5>
